# secmgr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
secmgr/: __main__.py
tests/: test-file.txt
