[tool.poetry]
name = "secmgr"
version = "1.0.7"
description = "Utility for working with AWS Secrets Manager"
authors = ["Naveed Khan <naveed@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
